[IMP] stock_weighing: allow to use the weigh actions with regular operations

--- a/stock_weighing/static/description/index.html
+++ b/stock_weighing/static/description/index.html
@@ -418,6 +418,9 @@ ready yet.</li>
 (kilograms, grams, etc.).</li>
 <li>Place some pending operations for those products.</li>
 </ul>
+<p>If you want to use the weighing system for other operations you can set
+the configuration parameter <tt class="docutils literal">stock_weighing.any_operation_actions</tt> to
+a true value. You’ll be a able to record other values.</p>
 </div>
 <div class="section" id="usage">
 <h1><a class="toc-backref" href="#toc-entry-3">Usage</a></h1>
